--- a/style.css
+++ b/style.css
@@ -45,138 +45,238 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
 
 input, select { vertical-align: middle; }
 
-/* Styles begin here */
-html,
+/******* Styles begin here *******/
+
+#wrapper {
+	width: 100%; 
+	margin: 0 auto;  
+	padding: 0;
+} 
+
 body {
-   margin:0;
-   padding:0;
-  height:100%;
-   background: url('http://i306.photobucket.com/albums/nn258/lwcstyling/rockywall.png') repeat;
-}
-
-#container {
-min-height:100%;
-   position: relative;
-}
-#header {
-background: rgba(255, 136, 104, 0.6);
--webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
--moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
-padding: 0px;
-}
-#body {
-overflow:auto;
-  padding-bottom: 80px;
-  margin-bottom: 80px;
-}
-
-h1 {
-width: 960px;
-font-family: 'italiana';
-font-size: 60px;
-color: #0f0f0f;
-text-transform: uppercase;
-padding: 18px 0px 0px 200px;
-/* text-align: center; */
-}
-
-h1 a {
-text-decoration: none;
-color: #180e41;
-}
-
-h2 {
-font-family: 'open sans condensed', sans-serif;
-font-size: 52px;
-color: #7b2141;
-padding-top: 15px;
-}
-
-h3 {
-font-family: 'open sans condensed', sans-serif;
-font-size: 44px;
-font-weight: 700;
-color: #7b2141;
+	font-family: 'Open Sans', sans-serif;
+	color: #3b3b3b;
+	font-size: 150%; /* 1.5em/24px */
+	font-weight: 300;
+	line-height: 1;
+/* 	padding: 0 .5em; */
+	margin: 0 auto;
 }
 
 p {
-font-family: 'open sans condensed', sans-serif;
-font-size: 24px;
-text-align: justify;
-/* padding-top: 12px; */
-color: #180e41;
+	font-size: .85em; 
+	line-height: 1.5; 
+	padding-top: 24px; 
+}
+
+h1 {
+	font-size: 3.5em; 
+	line-height: 1.1;
+	font-family: 'Berkshire Swash', cursive;
+	color: #180030;
+	padding-top: 5%;
+}
+
+h2 {
+	font-size: 2.166em;
+	font-family: 'Berkshire Swash', cursive;
+	color: #180030;
+	}
+h3 {
+	font-size: 1.333em;
+	font-weight: 300;
+	padding-top: 4%;
+	}
+h4 {
+	padding-top: 5%;
+	font-weight: 700;
+	}
+
+
+li {
+font-size: 1.66em;
+	line-height: 1.5;
+	font-weight: 700;
+	padding: 1em;
+	list-style-type: none;
+	display: inline;
+}
+
+img {
+max-width: 100%;
 }
 
 /* Navigation */
 
-
-.navigation {
-width: 960px;
-padding: 0px 0px 12px 410px;
+#topnav {
+	background-color: #FF5B53;
+	text-align: center;
+/* 	position: fixed; */
+	width: 100%;
+	padding: 1%;
+/* 	z-index: 10000; */
 }
 
 .navigation li {
-display: inline;
-  font-family: 'open sans condensed', sans-serif;
+  display: inline;
+  font-family: 'open sans', sans-serif;
   text-transform: uppercase;
-  font-size: 24px;
+  font-size: .8em;
   font-weight: 700;
-  padding: 1em;
-  color: #7b2141;
+  padding: 1.3em;
+  color: #ffffff;
 }
 
 .navigation li a {
   text-decoration: none;
-  color: #7b2141;
+  color: #ffffff;
 }
 
-.navigation a:hover {
-  font-weight: bold;
+/* Columns */
+
+.column-thin {
+width: 40%;
+/* background: yellow; */
+float: left;
+min-width: 400px;
+/* vertical-align: middle; */
 }
 
-/* Main Page */
+.column-fat {
+width: 60%;
+/* background: lavender; */
+float: left;
+/* padding: 5%; */
+min-width: 400px;
+}
+
+/* Hello */
+
+#hello {
+margin: 0 auto;
+overflow: auto;
+float: left;
+background: url('http://i306.photobucket.com/albums/nn258/lwcstyling/clean_textile.png') repeat;
+}
 
 #lisaimg {
-float: left;
-padding: 30px 0px 40px 190px;
-
+/* background: tomato; */
+padding: 5%;
+margin-top: 13%;
+text-align: center;
 }
 
-#lisabio {
-float: left;
-width: 450px;
-padding: 50px 0px 40px 50px;
+#lisaimg img {
+border-radius: 100%;
+-webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
+-moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
+box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
 }
 
-#lisabio p {
-padding-top: 12px;
+#greeting {
+/* background: yellow; */
+padding: 10%;
+color: #180030;
+margin-bottom: 5%;
 }
 
-#lisabio a {
+#greeting a {
 text-decoration: none;
-color: #7b2141;
+color: #180030;
 }
 
-#build {
-font-weight: 700;
-color: #7b2141;
+#greeting h2 {
+font-family: 'open sans', sans-serif;
+padding-top: 4%;
 }
 
 #you {
+font-weight: 700;
 text-transform: uppercase;
+}
+
+/* About */
+
+#about {
+margin: 0 auto;
+overflow: auto;
+float: left;
+background: #FF5B53;
+}
+
+#about-text {
+padding: 10%;
+/* text-align: center; */
+background: #FFD8CC;
+}
+
+#contact-about {
 font-weight: 700;
 }
 
-/* Work Page */
+#contact-about a {
+text-decoration: none;
+color: #180030;
+text-transform: uppercase;
+}
 
-#workinfo {
-width: 440px;
-padding: 40px 0px 20px 200px;
+#contact-about a:hover {
+color: #FF5B53;
+}
+
+#quote-box {
+margin-top: 5%;
+padding: 15%;
+text-align: center;
+color: #ffffff;
+font-weight: 300;
+}
+
+#quote-main1 {
+font-size: 1.1em;
+font-style: italic;
+}
+
+#quote-main2 {
+padding-top: 20%;
+font-size: 1.1em;
+font-style: italic;
+}
+
+#quote-by {
+font-size: .65em;
+}
+
+
+/* Work */
+
+#work {
+padding: 5%;
+clear: both;
+background: url('http://i306.photobucket.com/albums/nn258/lwcstyling/clean_textile.png') repeat;
+  overflow: auto;
+/*   padding-bottom: 20px; */
+/*   margin-bottom: 20px; */
+/*   width: 100%; */
+}
+
+#work-info {
+text-align: center;
 }
 
 .site-links {
-padding: 30px 0px 0px 200px;
+/* max-width: 100%; */
+margin-top: 3%;
+margin-left: 10%;
+text-align: center;
+}
+
+.site-links img {
+border-radius: 100%;
+border: 1px solid #180030;
+-webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
+-moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
+box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
 }
 
 .site-links a img {
@@ -189,110 +289,125 @@ opacity: 1;
 filter: alpha(opacity=100);
 }
 
-.site-links p {
+.flex {
+float: left;
+margin: 3%;
+width: 270px;
+display: inline-block;
 text-align: center;
 }
 
-
 #cambrian-link {
-width: 260px;
-float: left;
-padding: 30px 0px 50px 20px;
+text-align: center;
 }
 #hmm-link {
-width: 260px;
-float: left;
-padding: 30px 0px 50px 20px;
+text-align: center;
 }
 #orig-link {
-width: 260px;
-float: left;
-padding: 30px 0px 50px 20px;
+text-align: center;
 }
 
 #caption-one, #caption-two, #caption-three {
-  display: none;
-  padding-bottom: 40px;
+  visibility: hidden;
+  text-align: center;
 }
 
-#buffer {
-margin-bottom: 380px;
-}
-/* Cambrian */
-
-.rw-description {
-padding: 50px 0px 0px 200px;
+#caption-one span {
+font-style: italic;
 }
 
-.rw-description p {
-padding-left: 3px;
+/* Contact */
+
+#contact {
+text-align: center;
+margin: 0 auto;
+overflow: auto;
+/* float: left; */
+background: #180030;
 }
 
-.screenshot {
-padding: 30px 0px 50px 200px;
+#contact-text {
+padding: 5%;
+background: #FFD8CC;
+text-align: center;
 }
 
-.screenshot img {
-border-radius: 5px;
--webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
--moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
+#contact-text h4 {
+font-weight: 300;
 }
 
-/* Contact Page */
-
-#contact-page h2{
-padding: 40px 0px 20px 200px;
+#contact-text h3 {
+font-weight: 700;
+text-transform: uppercase;
 }
 
-#contact-page h3 {
-padding-left: 300px;
-}
-
-#contact-page ul {
-padding-left: 300px;
-list-style-type: none;
-}
-
-#contact-page ul li {
-display: inline;
-padding: 0px 5px 0px 5px;
-}
-
-#contact-page a {
+#contact-text a {
 text-decoration: none;
-color: #7b2141;
+color: #180030;
 }
 
-#buffer-c {
-margin-bottom: 310px;
+#contact-text a:hover {
+color: #FF5B53;
+}
+
+/* 
+#contact-links {
+color: #ffffff;
+text-align: center;
+padding-top: 16%;
+}
+
+#contact-links ul li a{
+text-decoration: none;
+color: #ffffff;
+}
+
+#contact-links a:hover {
+color: #FFD8CC;
+}
+ */
+
+#fun-facts {
+/* color: #ffffff; */
+text-align: center;
+padding: 7%;
+}
+
+#fun-facts h2 {
+color: #FFD8CC;
+padding-bottom: 2%;
+}
+
+#fun-facts p {
+color: #ffffff;
+font-size: .60em; 
+line-height: 1.5; 
+padding-top: 3%; 
+font-weight: 300;
+text-align: center;
 }
 
 /* Footer */
 
-#footer {
-  position: relative;
-  margin-top: -80px; /* negative value of footer height */
-  height: 80px;
-  clear:both;
-background: rgba(255, 136, 104, 0.6);
+#footer-bar {
+clear: both;
+background: #FF5B53;
+}
+
+#footer-bar p {
+font-size: .5em;
 text-align: center;
--webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
--moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, .2);
-}
-#footer ul {
-  padding-top: 10px;
-}
-#footer ul li {
-display: inline;
-padding: 20px 5px 0px 5px;
+padding: 10px 0px 10px 0px;
 }
 
-#footer li a {
-text-decoration: none;
-color: #180e41;
+/*******************************************************
+Media Queries               
+/********************************************************/
+
+/*** Need to fix this ***/
+/* 
+@media screen and (min-width: 400px) {
+	header, article {max-width: 37em; margin: 0 auto;}
+  
 }
-
-
-
+ */
